--- a/src/pages/signin/signin.scss
+++ b/src/pages/signin/signin.scss
@@ -1,3 +1,33 @@
 page-signin {
+  .component {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: color($colors, light);
 
+    .footer, .icon, .inputs {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .footer {
+      flex-grow: 2;
+      justify-content: flex-end;
+    }
+
+    .icon {
+      flex-grow: 1;
+      justify-content: center;
+      font-size: 140px;
+    }
+
+    .inputs {
+      button {
+        margin-top: 20px;
+      }
+    }
+  }
 }
