--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -1,3 +1,24 @@
 page-portfolio {
+  .card-content {
+    .col {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
+    p {
+      &.total {
+        font-size: 24px;
+      }
+
+      &.profit {
+        font-size: 20px;
+      }
+    }
+  }
+  .col-end{
+    display: flex;
+    justify-content: flex-end;
+  }
 }
