Add my operations list & remove operation

--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -1,4 +1,8 @@
 page-portfolio {
+  .card-header {
+    border-bottom: .55px solid #c8c7cc
+  }
+
   .card-content {
     .col {
       display: flex;
