Signin page: improve template

--- a/src/pages/signin/signin.scss
+++ b/src/pages/signin/signin.scss
@@ -18,7 +18,7 @@ page-signin {
       justify-content: flex-end;
     }
 
-    .icon {
+    .main-icon {
       flex-grow: 1;
       justify-content: center;
       font-size: 140px;
